[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = Cauldron
description = A KTL Keyword Interface dependency injection system.
author = Alexander Rudy
author_email = arrudy@ucsc.edu
license = BSD
edit_on_github = True
github_project = alexrudy/Cauldron

[entry_points]
Cauldron-router-zmq = Cauldron.zmq.router:main