[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = Cauldron
description = A KTL Keyword Interface dependency injection system.
author = Alexander Rudy
author_email = arrudy@ucsc.edu
license = BSD
edit_on_github = True
github_project = alexrudy/Cauldron
url = cauldron.readthedocs.org

[entry_points]
Cauldron-broker-zmq = Cauldron.zmq.broker:main
show = Cauldron.console:show
modify = Cauldron.console:modify

[backends]
zmq = Cauldron.zmq:setup_zmq_backend
local = Cauldron.local:setup_local_backend
mock = Cauldron.mock
